<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="550dp"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/detail_vehicule_cardview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="80dp"
        android:layout_margin="@dimen/item_margin"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/detail_vehicule_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/detail_vehicule_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:layout_marginLeft="@dimen/item_margin"
        android:text="@string/home_page_item_vehicule_name"
        app:layout_constraintStart_toEndOf="@id/detail_vehicule_cardview"
        app:layout_constraintTop_toTopOf="@id/detail_vehicule_cardview"
        style="@style/Titre1TextStyle"/>

    <ImageView
        android:id="@+id/detail_vehicule_star_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_unstar"
        app:layout_constraintBottom_toBottomOf="@+id/detail_vehicule_name"
        app:layout_constraintStart_toEndOf="@+id/detail_vehicule_name"
        android:layout_marginLeft="@dimen/item_margin"/>

    <TextView
        android:id="@+id/detail_vehicule_immat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_margin"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/home_page_item_vehicule_immat"
        app:layout_constraintStart_toEndOf="@id/detail_vehicule_cardview"
        app:layout_constraintTop_toBottomOf="@id/detail_vehicule_name"
        style="@style/Titre2TextStyle"/>

    <ImageView
        android:id="@+id/detail_vehicule_close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        android:layout_marginRight="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/detail_vehicule_immat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detail_vehicule_name" />

    <TextView
        android:id="@+id/vehicule_view_model_rubrique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/vehicule_view_model_rubrique"
        app:layout_constraintStart_toStartOf="@+id/detail_vehicule_cardview"
        app:layout_constraintTop_toBottomOf="@+id/detail_vehicule_cardview"
        style="@style/Titre2TextStyle"/>

    <TextView
        android:id="@+id/detail_vehicule_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/vehicule_view_model_exemple"
        app:layout_constraintStart_toStartOf="@+id/vehicule_view_model_rubrique"
        app:layout_constraintTop_toBottomOf="@+id/vehicule_view_model_rubrique"
        style="@style/DefaultTextStyle"/>

    <TextView
        android:id="@+id/vehicule_view_year_rubrique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/vehicule_view_year_rubrique"
        app:layout_constraintStart_toStartOf="@+id/detail_vehicule_model"
        app:layout_constraintTop_toBottomOf="@+id/detail_vehicule_model"
        style="@style/Titre2TextStyle"/>

    <TextView
        android:id="@+id/detail_vehicule_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/vehicule_view_year_exemple"
        app:layout_constraintStart_toStartOf="@+id/vehicule_view_year_rubrique"
        app:layout_constraintTop_toBottomOf="@+id/vehicule_view_year_rubrique"
        style="@style/DefaultTextStyle"/>

    <TextView
        android:id="@+id/vehicule_view_energy_rubrique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/vehicule_view_energy_rubrique"
        app:layout_constraintStart_toStartOf="@+id/detail_vehicule_year"
        app:layout_constraintTop_toBottomOf="@+id/detail_vehicule_year"
        style="@style/Titre2TextStyle"/>

    <TextView
        android:id="@+id/detail_vehicule_energy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/vehicule_view_energy_exemple"
        app:layout_constraintStart_toStartOf="@+id/vehicule_view_energy_rubrique"
        app:layout_constraintTop_toBottomOf="@+id/vehicule_view_energy_rubrique"
        style="@style/DefaultTextStyle"/>

    <TextView
        android:id="@+id/vehicule_view_critair_rubrique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/vehicule_view_critair_rubrique"
        app:layout_constraintStart_toStartOf="@+id/detail_vehicule_energy"
        app:layout_constraintTop_toBottomOf="@+id/detail_vehicule_energy"
        style="@style/Titre2TextStyle"/>

    <TextView
        android:id="@+id/detail_vehicule_critair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/vehicule_view_critair_exemple"
        app:layout_constraintStart_toStartOf="@+id/vehicule_view_critair_rubrique"
        app:layout_constraintTop_toBottomOf="@+id/vehicule_view_critair_rubrique"
        style="@style/DefaultTextStyle"/>


    <Button
        android:id="@+id/detail_vehicule_depense_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/vehicule_view_depense_button"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_vehicule_critair"
        style="@style/Titre2TextStyle"/>

    <Button
        android:id="@+id/detail_vehicule_delete_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/vehicule_view_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_vehicule_depense_button"
        style="@style/Titre2TextStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>